# Barnes-Hut-Algorithm

./: .gitignore  LICENSE  README.md
barnes-hut/: README.md
barnes-hut/include/: vector2D.h  verletIntegrator.h
barnes-hut/src/: Body.cpp  BruteForceSimulator.cpp  test.cpp
brute-force/: CMakeLists.txt  README.md
brute-force/include/: Body.h  BruteForceSimulator.h  vector2D.h
brute-force/src/: BruteForceSimulator.cpp  main.cpp  vector2D.cpp  verletIntegrator.cpp
report-presentation/: .~lock.midterm-presentation.odp#  ap-project.bbl  ap-project.tex  ap-project.tex.bak  bibliography.bib  midterm-presentation.odp  midterm-presentation.pptx  pdflatex96122.fls
